--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -20,7 +20,7 @@
 // @import "some-node-module";
 // @import "@some-company/some-node-module";
 @import "@fortawesome/fontawesome-free/css/all.css";
-@import "../PEC1/node_modules/hamburgers/_sass/hamburgers/hamburgers.scss";
+@import "hamburgers/_sass/hamburgers/hamburgers.scss";
 
 /**
  * Import layouts
